# lawzy

./: .editorconfig  .gitignore  README.md  config.py  pyproject.toml  requirements.txt  run.py  uwsgi.ini
app/: __init__.py  models.py
app/aggregator/: routes.py
app/storage/113b29ce-4eea-47f3-9a34-ceee7c9a1b69/: config.json  data.json
app/storage/47927763-6f61-4317-b277-63e1c6181908/: config.json  data.json  style.json
app/storage/4f58127c-c985-492b-b1f0-2755e2dce03d/: config.json  data.json
app/storage/813fcc77-a7e0-4146-b765-cf578632ae4f/: config.json  data.json  style.json
app/storage/cc62325a-2699-4336-8872-7adef0113251/: config.json  struct.json
app/storage/ccd73374-61c8-42c4-88cc-91f2a14406c2/: config.json  data.json
app/storage/ddc032bf-5e86-4dab-9124-5dfff811fd81/: config.json  data.json  keywords.json  style.json
app/storage/f0bc9a99-d4d9-479f-ae46-c2a1dee52a66/: config.json  data.json  source.txt  style.json
app/templates/: hello.html  html_header.html
app/templates/aggregator/: base.html  document.html
app/templates/outline/: rating.html
core/: __init__.py  converters.py  processing.py
debian/: README.md  lawzy.service
lawzy/: config.py
lawzy/app/: __init__.py  models.py
lawzy/app/aggregator/: routes.py
lawzy/app/templates/: hello.html
lawzy/app/templates/aggregator/: base.html  document.html
lawzy/core/: __init__.py  compiler.py  config.py  converters.py  parser.py  processing.py  style.py
tests/: config.py
tests/core/: test_compiler.py
tests/samples/: short.txt
