[project]
name = "lawzy"
description =  ""
version = "1.2.1"
authors = [
    { name = "Ilia Lazarev", email = "the.ilia.lazarev@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "Flask==2.2.2",
    "numpy==1.24.1",
    "python-docx==0.8.11",
    "docxcompose==1.4.0",
    "scikit-learn==1.2.0",
    "scipy==1.10.0",
]

[project.urls]
"Homepage" = "https://github.com/kephircheek/lawzy"

[project.optional-dependencies]
dev = [
    "mypy==0.991",
    "isort[colors]==5.11.4",
    "black==22.12.0",
    "pydocstyle==6.2.2",
    "toml==0.10.2",
    "uWSGI==2.0.21",
]
prod = [
    "uWSGI==2.0.21",
]

[tool.setuptools]
py-modules = []

[tool.isort]
profile = "black"

[tool.black]
line-length = 90
